Fixed footer link alignment.

--- a/assets/css/base/header-footer.css
+++ b/assets/css/base/header-footer.css
@@ -60,6 +60,14 @@ header ul {
   padding-bottom: 15px;
 }
 
+#footer-lower a {
+  padding-top: 4px;
+}
+
+#footer-lower a:last-of-type {
+  padding-top: 0;
+}
+
 
 /* ==== MOBILE RULES ================================================================================================ */
 
